--- a/Twitter US Airline Sentiment - 0. Data exploration and classic approaches.ipynb
+++ b/Twitter US Airline Sentiment - 0. Data exploration and classic approaches.ipynb
@@ -739,6 +739,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the training of all the examples, we will split 10% of the data for the validation (test) set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -747,14 +754,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training size: 7732; test size: 3809\n"
+      "Training size: 10386; test size: 1155\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "text_train, text_test, label_train, label_test = train_test_split(df_binary['norm_text'], df_binary['sentiment'], test_size=0.33, random_state=0)\n",
+    "text_train, text_test, label_train, label_test = train_test_split(df_binary['norm_text'], df_binary['sentiment'], test_size=0.1, random_state=0)\n",
     "\n",
     "print(\"Training size: %d; test size: %d\" % (len(text_train), len(text_test)))"
    ]
@@ -768,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,14 +817,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('random_with_class_dist', 0.6707190894981894, 0.6694670517196114)\n"
+      "('random_with_class_dist', 0.6746581937223185, 0.6588744588744588)\n"
      ]
     }
    ],
@@ -849,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,14 +869,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of the training set with word counts as features (num_samples, num_features): (7732, 8678)\n"
+      "Size of the training set with word counts as features (num_samples, num_features): (10386, 10201)\n"
      ]
     }
    ],
@@ -879,14 +886,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('nb_multi_counts', 0.9434816347646146, 0.902861643475978)\n"
+      "('nb_multi_counts', 0.9433853264009243, 0.9038961038961039)\n"
      ]
     }
    ],
@@ -911,14 +918,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of the training set with TF-IDF vectorization (num_samples, num_features): (7732, 8469)\n"
+      "Size of the training set with TF-IDF vectorization (num_samples, num_features): (10386, 9981)\n"
      ]
     }
    ],
@@ -937,14 +944,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('nb_gaussian_tf_idf', 0.8616140713916193, 0.7122604358099238)\n"
+      "('nb_gaussian_tf_idf', 0.8290968611592529, 0.6874458874458874)\n"
      ]
     }
    ],
@@ -969,14 +976,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of the training set with TF-IDF vectorization and feature selection (num_samples, num_features): (7732, 846)\n"
+      "Size of the training set with TF-IDF vectorization and feature selection (num_samples, num_features): (10386, 998)\n"
      ]
     }
    ],
@@ -996,14 +1003,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('nb_gaussian_tf_idf_feature_sel', 0.874159337816865, 0.8112365450249409)\n"
+      "('nb_gaussian_tf_idf_feature_sel', 0.865106874638937, 0.8112554112554112)\n"
      ]
     }
    ],
