tests with 0.1; adding discussion

--- a/Twitter US Airline Sentiment - 0. Data exploration and classic approaches.ipynb
+++ b/Twitter US Airline Sentiment - 0. Data exploration and classic approaches.ipynb
@@ -1033,11 +1033,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVC would use these best parameters: {'C': 10.0, 'kernel': 'linear'}, train score=0.951906, test score=0.914982\n",
+      "('SVC_linear_10.0', 0.951906488272142, 0.9149817061428847)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -1061,9 +1070,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>param_kernel</th>\n",
+       "      <th>param_C</th>\n",
+       "      <th>mean_train_score</th>\n",
+       "      <th>mean_test_score</th>\n",
+       "      <th>mean_fit_time</th>\n",
+       "      <th>mean_score_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>linear</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.921240</td>\n",
+       "      <td>0.903235</td>\n",
+       "      <td>25.123315</td>\n",
+       "      <td>9.672832</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>rbf</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.794724</td>\n",
+       "      <td>0.794724</td>\n",
+       "      <td>33.335429</td>\n",
+       "      <td>13.849491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>linear</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.951906</td>\n",
+       "      <td>0.914982</td>\n",
+       "      <td>20.304209</td>\n",
+       "      <td>7.031278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>rbf</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.813980</td>\n",
+       "      <td>0.813595</td>\n",
+       "      <td>34.113281</td>\n",
+       "      <td>13.956996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>linear</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.957395</td>\n",
+       "      <td>0.912767</td>\n",
+       "      <td>22.295236</td>\n",
+       "      <td>5.947098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>rbf</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.877431</td>\n",
+       "      <td>0.871750</td>\n",
+       "      <td>29.860306</td>\n",
+       "      <td>12.008685</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  param_kernel param_C  mean_train_score  mean_test_score  mean_fit_time  \\\n",
+       "0       linear       1          0.921240         0.903235      25.123315   \n",
+       "1          rbf       1          0.794724         0.794724      33.335429   \n",
+       "2       linear      10          0.951906         0.914982      20.304209   \n",
+       "3          rbf      10          0.813980         0.813595      34.113281   \n",
+       "4       linear     100          0.957395         0.912767      22.295236   \n",
+       "5          rbf     100          0.877431         0.871750      29.860306   \n",
+       "\n",
+       "   mean_score_time  \n",
+       "0         9.672832  \n",
+       "1        13.849491  \n",
+       "2         7.031278  \n",
+       "3        13.956996  \n",
+       "4         5.947098  \n",
+       "5        12.008685  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "svc_df = pd.DataFrame(clf.cv_results_)[['param_kernel', 'param_C', 'mean_train_score', 'mean_test_score', 'mean_fit_time', 'mean_score_time']]\n",
     "svc_df"
@@ -1078,9 +1198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('dtree', 0.952050837666089, 0.8805194805194805)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
@@ -1103,9 +1231,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>method</th>\n",
+       "      <th>score_train</th>\n",
+       "      <th>score_test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>random_with_class_dist</td>\n",
+       "      <td>0.674658</td>\n",
+       "      <td>0.658874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>nb_multi_counts</td>\n",
+       "      <td>0.943385</td>\n",
+       "      <td>0.903896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>nb_gaussian_tf_idf</td>\n",
+       "      <td>0.829097</td>\n",
+       "      <td>0.687446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>nb_gaussian_tf_idf_feature_sel</td>\n",
+       "      <td>0.865107</td>\n",
+       "      <td>0.811255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SVC_linear_10.0</td>\n",
+       "      <td>0.951906</td>\n",
+       "      <td>0.914982</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>dtree</td>\n",
+       "      <td>0.952051</td>\n",
+       "      <td>0.880519</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           method  score_train  score_test\n",
+       "0          random_with_class_dist     0.674658    0.658874\n",
+       "1                 nb_multi_counts     0.943385    0.903896\n",
+       "2              nb_gaussian_tf_idf     0.829097    0.687446\n",
+       "3  nb_gaussian_tf_idf_feature_sel     0.865107    0.811255\n",
+       "4                 SVC_linear_10.0     0.951906    0.914982\n",
+       "5                           dtree     0.952051    0.880519"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results_df = pd.DataFrame([(k, *v) for k, v in results.items()], columns=['method', 'score_train', 'score_test'])\n",
     "results_df"
@@ -1113,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
